[tool.poetry]
name = "asyncio-absorption"
version = "0.1.0"
description = "Asyncio learning and practice project"
authors = ["blackcat"]
readme = "README.md"
packages = [{include = "basics"},
            {include = "io"},
            {include = "sync"},
            ]

[tool.poetry.dependencies]
python = "^3.12"
# 核心框架
fastapi = "0.115.5"
uvicorn = {extras = ["standard"], version = "0.30.6"}

# 异步包
aiohttp = "3.10.10"
aiofiles = "24.1.0"
httpx = "0.28.1"

# 数据库
sqlalchemy = "2.0.36"
aiosqlite = "0.20.0"

# 其他工具
ipython = "8.29.0"
jupyter = "1.1.1"
pillow = "10.4.0"

[tool.poetry.group.dev.dependencies]
# 开发工具
black = "24.10.0"
isort = "5.13.2"
mypy = "1.13.0"
pytest = "8.3.3"
faker = ">=24.0.0, <28.0.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
